<resources>
    <string name="app_name">Quizz</string>
    <string name="total_questions_label">Total Questions: %1$d</string>
    <string name="question_placeholder">Question goes here</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="submit">Submit</string>
    <string name="welcome_message">Welcome to the Quiz App!</string>
    <string name="continue_to_quiz">Continue to Quiz</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="login">Login</string>
        <string name="go_to_register">Go to Register</string>


</resources>