<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E35B5B"
    android:padding="24dp">

    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_questions_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/choices_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question_placeholder"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ans_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/option_a"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/ans_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/option_b"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/ans_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/option_c"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/ans_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/option_d"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/submit"
        android:backgroundTint="#65E614"
        android:textColor="#000000"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>
</RelativeLayout>

